working poc with curl

--- a/public/nested/index.html
+++ b/public/nested/index.html
@@ -13,7 +13,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-image: var(--gradient-15);
+            background-image: var(--gradient-23);
             font-family: 'Arial', sans-serif;
         }
         .container {
@@ -35,7 +35,7 @@
 <body>
     <div class="container">
         <p>
-           The Monstera plant, also known as the Swiss Cheese Plant, is a popular houseplant known for its large, glossy, heart-shaped leaves with unique perforations. Native to tropical rainforests, Monstera adds a touch of the exotic to any indoor space. It is easy to care for, thriving in indirect light and requiring only moderate watering, making it an ideal choice for both novice and experienced plant enthusiasts.
+          The Fiddle Leaf Fig, scientifically known as Ficus lyrata, is a popular indoor plant admired for its large, violin-shaped leaves that have a glossy, leathery texture. Originating from the tropical regions of West Africa, this plant can grow up to 6-10 feet tall indoors, making it a striking focal point in any room. It prefers bright, indirect light and should be watered when the top inch of soil feels dry. With its bold foliage and elegant form, the Fiddle Leaf Fig adds a touch of sophistication and natural beauty to interior spaces, making it a favorite among plant enthusiasts and interior designers alike.
         </p>
     </div>
 </body>
